:art: Update index.html title and add documentation link and footer

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,12 @@
 <div class="jumbotron text-center">
 
     <div class="container">
-        <h1>Olá Mundo</h1>
+        <h1>Backend Voll.med</h1>
+        <a href="/swagger-ui/index.html" class="btn btn-primary">Documentação</a>
     </div>
+    <footer>
+        <p>Portifólio Raul França </p>
+    </footer>
 
 </div>
 
